--- a/static/style.css
+++ b/static/style.css
@@ -1,190 +1,152 @@
-*, *::after, *::before {
-	box-sizing: inherit;
-}
-
 body {
-	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif;
-	color: #34495E;
+	font-family: Lato, "sans-serif";
+	background-color: #c0c0c0;
+}
+.header {
+	color: #c0c0c0;
+	font-size: 1.4rem;
+}
+.nav_link {
+	text-decoration: none;
+	color: inherit;
+	
+}
+.nav-link:hover {
+	color: white;
+}
+.nav-link-active {
+	font-weight: bold;
+	color: white;
+}
+.top-controls {
+	height: 30px;
+}
+.card {
+	width: 300px;
+}
+.card-car-road {
+	border: 2px solid #00B6FF;
+}
+.card-car-dirt {
+	border: 2px solid #FF9B00;
+}
+.card-car-offroad {
+	border: 2px solid #04B207;
+}
+.card-title {
+	height: 190px;
+	font-size: 1.3rem;
+}
+.card-track-title {
+	height: 150px;
+	font-size: 1.3rem;
+}
+.card-car-link {
+	text-decoration: none;
+	color: inherit;
+}
+.card-car-link:hover {
+	text-decoration: underline;
+	color: inherit;
+}
+.card-car-model {
+	border: 2px solid white;
+	border-radius: 4px;
+	padding: 2px;
+	font-weight: bold;
+	font-size: 1.5rem;
+}
+.card-car-title-road {
+	background-color: #00B6FF;
+}
+.card-car-title-dirt {
+	background-color: #FF9B00;
+}
+.card-car-title-offroad {
+	background-color: #04B207;
+}
+.card-body {
 	font-size: 1.2rem;
 }
-
-.header, .main {
-	min-width: 40rem;
-	max-width: 60rem;
-	margin: 0 auto;
+.card-car-class-b {
+	border: 2px solid #FF8F00;
 }
-
-.header {
-	display: flex;
-	flex-direction: column;
-	color: inherit;
-}
-
-.header__brand {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	border-bottom: 2px solid black;
-	padding: 0.1rem 0.25rem;
-}
-
-.header__brand-logo {
-	max-width: 20%;
-}
-
-.header__brand-name {
-	font-size: 2rem;
-}
-
-.header__navigation {
-	border-bottom: 2px solid black;
-}
-
-.header__navigation-list {
-	list-style: none;
-	padding: 0;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-}
-
-.header__navigation-listitem {
-
-}
-
-.header__navigation-link {
-	text-decoration: none;
-	color: inherit;
-	padding: 5px 10px;
-}
-
-.header__navigation-link:hover {
-	background: #85929E;
-	border-radius: 5px;
-	transition: color 0.3s ease-in-out;
-}
-
-.main {
-	display: flex;
-	flex-direction: column;
-	color: inherit;
-	align-items: center;
-}
-
-.form {
-	display: flex;
-	flex-direction: row;
-	padding: 10px;
-	align-items: center;
-	margin-bottom: 20px;
-}
-
-.form__input {
-	margin: 0;
-}
-.form__label {
-	padding: 0.3rem 0.2rem;	
-}
-
-.form__select {
-	color: inherit;
-	font-size: inherit;
-	border: 1px solid #85929E;
-	padding: 0.3rem 0.2rem;
-	border-radius: 6px;
-}
-
-.form__button {
-	display: inline-block;
-	font-size: inherit;
-	color: inherit;
-	background: #85929E;
-	border-radius: 6px;
-	border: none;
-	padding: 0.3rem 1.5rem;
-	cursor: pointer;
-	margin-left: 5px;
-}
-
-.form__button:hover {
-	background: #AEB6BF;
-	transition: color 0.3s ease-in-out;
-}
-
-.cars {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.car {
-	width: 15rem;
-	display: flex;
-	flex-direction: column;
-	border: 1px solid #85929E;
-	border-radius: 6px;
-	margin: 10px;
-}
-
-.car__header {
+.card-car-class-b-letter {
+	font-weight: bold;
+	background-color: #FF8F00;
 	color: white;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 5px;
+	min-width: 30px;
+	text-align: center;
 }
-
-.color_road {
-	background-color: #5DADE2;
+.card-car-class-a {
+	border: 2px solid #FF0004;
 }
-
-.color_dirt {
-	background-color: #F8C471;
+.card-car-class-a-letter {
+	font-weight: bold;
+	background-color: #FF0004;
+	color: white;
+	min-width: 30px;
+	text-align: center;
 }
-
-.color_offroad {
-	background-color: #7DCEA0;
+.card-car-class-s1 {
+	border: 2px solid #F700FF;
 }
-
-.car__header-model {
-	margin: 0;
+.card-car-class-s1-letter {
+	font-weight: bold;
+	background-color: #F700FF;
+	color: white;
+	min-width: 30px;
+	text-align: center;
 }
-
-.car__header-vendor {
-	margin: 0;
+.card-car-class-s2 {
+	border: 2px solid #002BFF;
 }
-
-.car__header-link {
-	text-decoration: none;
-	color: inherit;
+.card-car-class-s2-letter {
+	font-weight: bold;
+	background-color: #002BFF;
+	color: white;
+	min-width: 30px;
+	text-align: center;
 }
-
-.car__header-link:hover {
-	text-decoration: underline;
+.card-car-class-pi {
+	font-weight: bold;
 }
-
-.car__header-information {
-	margin: 0;
-	list-style: none;
-	padding: 0;
-	display: flex;
-	flex-direction: column;
+.card-car-drivetrain {
+	font-weight: bold;
 }
-
-.car__image {
-	padding: 5px;
+.car-type-road {
+	background-color: #00B6FF;
+	padding: 2px;
+	color: white;
+	border-radius: 3px;
 }
-
-.car__footer {
-	padding: 5px;
+.car-type-dirt {
+	background-color: #FF9B00;
+	padding: 2px;
+	color: white;
+	border-radius: 3px;
 }
-
-.car__footer-information {
-	margin: 0;
-	list-style: none;
-	padding: 0;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+.car-type-offroad {
+	background-color: #04B207;
+	padding: 2px;
+	color: white;
+	border-radius: 3px;
+}
+#myBtn {
+	display: none; /* Hidden by default */
+	position: fixed; /* Fixed/sticky position */
+	bottom: 20px; /* Place the button at the bottom of the page */
+	right: 30px; /* Place the button 30px from the right */
+	z-index: 99; /* Make sure it does not overlap */
+	border: none; /* Remove borders */
+	outline: none; /* Remove outline */
+	background-color: black; /* Set a background color */
+	color: white; /* Text color */
+	cursor: pointer; /* Add a mouse pointer on hover */
+	padding: 15px; /* Some padding */
+	border-radius: 10px; /* Rounded corners */
+	font-size: 18px; /* Increase font size */
+}
+#myBtn:hover {
+	background-color: #555; /* Add a dark-grey background on hover */
 }
