--- a/templates/road.html
+++ b/templates/road.html
@@ -1,5 +1,40 @@
-{% extends "layout.html" %}
+{% from "macros.jinja2" import table_row, sort_search_bar %}
+{% extends "base.html" %}
 
-{% block main_content %}
-	
+{% block content %}
+	<div class="container">
+        {{ sort_search_bar() }}
+        <div class="row col-md-12">
+            <div class="col-md-12">
+                <table class="table table-striped table-bordered table-hover">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>#</th>
+                            <th>Vendor</th>
+                            <th>Model</th>
+                            <th>Year</th>
+                            <th>Class</th>
+                            <th>Type</th>
+                            <th>Power</th>
+                            <th>Mass</th>
+                            <th>Max Speed</th>
+                            <th>Drivetrain</th>
+                            <th>Test Circuit</th>
+                            <th>Races</th>
+                            <th>Wins</th>
+                            <th>Podiums</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for car in cars %}
+                            <tr>
+                                <td class="align-middle">{{ loop.index }}</td>
+                                {{ table_row(car) }}
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 {% endblock%}
