--- a/templates/generate.html
+++ b/templates/generate.html
@@ -33,6 +33,8 @@
                         <label class="form-label" for="car_class_id">Car class</label>
                         <select class="form-control" name="car_class" id="car_class_id">
                             <option value="ANY">ANY</option>
+                            <option value="D500">D500</option>
+                            <option value="C600">C600</option>
                             <option value="B700">B700</option>
                             <option value="A800">A800</option>
                             <option value="S1900">S1900</option>
@@ -54,6 +56,8 @@
                         </select>
                         <label class="form-label" for="car_class_id">Car class</label>
                         <select class="form-control" name="car_class" id="car_class_id">
+                            <option value="D500">D500</option>
+                            <option value="C600">C600</option>
                             <option value="B700">B700</option>
                             <option value="A800">A800</option>
                             <option value="S1900">S1900</option>
