--- a/templates/add_car.html
+++ b/templates/add_car.html
@@ -20,6 +20,8 @@
                     <div class="mb-1">
                         <label class="form-label" for="class_id">Class</label>
                         <select class="form-control" id="class_id" name="class">
+                            <option value="D500">D500</option>
+                            <option value="C600">C600</option>
                             <option value="B700">B700</option>
                             <option value="A800">A800</option>
                             <option value="S1900">S1900</option>
