--- a/templates/macros.jinja2
+++ b/templates/macros.jinja2
@@ -1,4 +1,22 @@
 {% macro car_class(class) %}
+    {% if class == 'D500' %}
+        <div class="card-car-class-d d-flex m-0 p-0">
+            <div class="card-car-class-d-letter m-0 p-1">
+                D
+            </div>
+            <div class="card-car-class-pi m-0 p-1">
+                500
+            </div>
+        </div>
+    {% if class == 'C600' %}
+        <div class="card-car-class-c d-flex m-0 p-0">
+            <div class="card-car-class-c-letter m-0 p-1">
+                C
+            </div>
+            <div class="card-car-class-pi m-0 p-1">
+                600
+            </div>
+        </div>
     {% if class == 'B700' %}
         <div class="card-car-class-b d-flex m-0 p-0">
             <div class="card-car-class-b-letter m-0 p-1">
