added d and c classes

--- a/templates/macros.jinja2
+++ b/templates/macros.jinja2
@@ -8,7 +8,7 @@
                 500
             </div>
         </div>
-    {% if class == 'C600' %}
+    {% elif class == 'C600' %}
         <div class="card-car-class-c d-flex m-0 p-0">
             <div class="card-car-class-c-letter m-0 p-1">
                 C
@@ -17,7 +17,7 @@
                 600
             </div>
         </div>
-    {% if class == 'B700' %}
+    {% elif class == 'B700' %}
         <div class="card-car-class-b d-flex m-0 p-0">
             <div class="card-car-class-b-letter m-0 p-1">
                 B
